# nn-qt

./: Cargo.toml  README.md
backup/: frontend  main
qt_nn/: CMakeLists.txt  build.rs  main_qt.rs  qt_integration.rs  wrapper.h
src/: frontend_qt.rs  main.rs
