[package]
name = "water_potability_nn"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
plotters = "0.3"
indicatif = "0.17"
egui = "0.24"
egui_plot = "0.24"
eframe = "0.24"
winapi = { version = "0.3", features = ["winuser"] }